refactor: clean repo — keep BigDecimal.java + patches only
- Remove MutableBigInteger.java, docs, test from tree
- Add patches: bigdecimal_v10, mutablebigint_knuth, full_optimization
- Update README with usage instructions
- .gitignore excludes build artifacts and temp files